[tool.poetry]
name = "replitproject-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "3.0.3"
cryptography = "43.0.1"
aiohttp = "3.10.8"
requests = "2.32.3"
typing-extensions = "4.12.2"
pytest = "8.3.3"
setuptools = "75.1.0"
termcolor = "2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

